.flux/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: test-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* "^/health" ) {
        return 404;
      }
      if ($request_uri ~* "^/alive" ) {
        return 404;
      }
spec:
  rules:
    - host: api.shop-test.k1ng.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 80
